# openGL_game_engine

./: .clangd  .clangd_linux  CMakeLists.txt  hello  setup_clang.sh  triangle.c  window_callbacks.c  window_callbacks.h
include/: top_level_include.h
include/glad/: glad.h
shaders/: fragmentShader.frag  vertexShader.vert
src/: CMakeLists.txt  camera_translations.cpp  glad.c  hello.c  light_source.cpp  main.c  mesh_gravity.cpp  particle_sim.cpp  practice_frag_shader.frag  practice_vert_shader.vert  rectangle.c  snake_game.c  sphere.cpp  sphere_w_tex.cpp  spheres.cpp  transformations.cpp  triangle.cpp  triangle_test.cpp  window_callbacks.h
src/objects/: CMakeLists.txt  Camera.cpp  Camera.h  CameraObject.cpp  CameraObject.h  Common.h  CommonStructs.h  Cube.cpp  Cube.h  EngineObject.h  MeshPlane.cpp  MeshPlane.h  Object.cpp  Object.h  Particle.cpp  Particle.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Spheres.cpp  Spheres.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
src/shaders/: CMakeLists.txt  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderPrograms.cpp  ShaderPrograms.h  ShaderTest.cpp  ShaderTest.h  Spheres.frag  Spheres.vert  Spheres_GPU.frag  Spheres_GPU.vert  VertexShaders.h  frag_light.frag  fragmentShader.frag  fragmentShader2.frag  fragment_shader3d.frag  gravity.comp  light_source.frag  light_source.vert  light_source_w_texture.frag  light_source_w_texture.vert  mesh_particle.frag  mesh_particle.vert  object_w_material.frag  object_w_texture.frag  object_w_texture.vert  plane_gravity.frag  plane_gravity.vert  plane_gravity_multi.vert  text.frag  text.vert  vertexShader.vert  vertexShader2.vert  vertex_light.vert  vertex_shader3d.vert  wave_function.comp
src/textures/: CMakeLists.txt  Texture.cpp  Texture.h
src/window_functions/: CMakeLists.txt  TextRender.cpp  TextRender.h  window_functions.c  window_functions.cpp  window_functions.h
